modify isOverlap method